# meetingtime

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml  release-please-config.json
.github/workflows/: release.yml
.husky/: commit-msg  pre-commit
examples/: config.toml
src/meetingtime/: __init__.py  aliases.py  cli.py  config.py
