[project]
name = 'meetingtime'
version = "0.3.1"
description = 'Convert a single date/time into a nicely formatted summary across many time zones.'
readme = 'README.md'
requires-python = '>=3.9'
license = { text = 'MIT' }
authors = [
    { name = 'Lok Hei Lui', email = 'kenlh.lui@utoronto.ca'}]
dependencies = [
    # 'tzdata' ships the IANA time zone database on platforms (mainly Windows)
    # that do not provide one on their own. It is a no-op / already-satisfied
    # on most Linux and macOS systems, but keeping it as a dependency makes
    # the tool work everywhere out of the box.
    'tzdata; sys_platform == "win32"',
]

Homepage = "https://github.com/kenlhlui/meetingtime"
Documentation = "https://github.com/kenlhlui/meetingtime/blob/main/README.md"
Repository = "https://github.com/kenlhlui/meetingtime.git"
Issues = "https://github.com/kenlhlui/meetingtime/issues"
Changelog = "https://github.com/kenlhlui/meetingtime/blob/master/CHANGELOG.md"

[project.scripts]
meetingtime = 'meetingtime.cli:main'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/meetingtime']
